<resources>
    <string name="app_name">parcial-2-am-acn4bv-castro-verdugo</string>
    <string name="inicial_main_titulo">Bienvenidos a: </string>
    <string name="logueo">Ingresar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="reintentar">Reintentar Logueo</string>
    <string name="volver">Volver</string>
    <string name="registro">Registrarme</string>
    <string name="descripcion_fondo">Imagen de Fondo</string>
    <string name="descripcion_logo">Imagen de Logo</string>
    <string name="user_label">Usuario</string>
    <string name="password_label">Clave</string>
    <string name="fname_label">Nombre</string>
    <string name="lname_label">Apellido</string>
    <string name="user_description">Ingrese su mail como usuario</string>
    <string name="password_description">Ingrese su contraseña</string>
    <string name="fname_description">Ingrese su nombre</string>
    <string name="lname_description">Ingrese su apellido</string>
    <string name="titulo">Titulo</string>
    <string name="inicio_title">Inicio de Sesión</string>
    <string name="registro_title">Registro de Usuario</string>
    <string name="error_text">Ups.... Algo salió mal al iniciar sesión.....</string>
    <string name="error_img_desc">Imagen de error de logueo</string>
    <string name="equipos_title">Equipos</string>
    <string name="noticias_title">Noticias</string>
    <string name="scroll_horizontal">Scroll horizontal</string>
    <string name="btn_boca">botón boca</string>
    <string name="btn_river">botón river</string>
    <string name="btn_central">botón central cordoba</string>
    <string name="btn_rosario">botón rosario central</string>
    <string name="btn_racing">botón racing</string>
    <string name="btn_newells">botón newels</string>
    <string name="btn_defensa">botón defensa</string>
    <string name="btn_independiente">botón independiente</string>
    <string name="escudo">escudo</string>
    <string name="contenido1">esto es el titulo de la nota que hay que ver que se pone</string>
    <string name="contenido2">esta es la nota en si y vemos que pasa esta es la nota en si y vemos que pasa esta es la nota en si y vemos que pasa esta es la nota en si y vemos que pasa esta es la nota en si y vemos que pasa esta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasaesta es la nota en si y vemos que pasa</string>
    <string name="img_contenido">imagen de contenido</string>
    <string name="tituloNoticia">Últimas novedades</string>
    <string name="content1">Chiqui Tapia será investigado por presunto lavado de dinero</string>
    <string name="content2">El presidente de la AFA fue denunciado de forma anónima ante las autoridades y será investigado por presunto lavado de dinero. Se vienen días alterados dentro de la Asociación de Fútbol Argentino. Según diversos medios, el presidente Claudio Chiqui Tapia ha recibido la noticia de que se realizará una investigación sobre su persona por un presunto lavado de dinero. La denuncia puesta sobre el máximo mandatario del fútbol argentino, de manera anónima, llegó al e-mail de los tribunales de Buenos Aires de Campana.</string>
    <string name="tituloNoticiaCentral">Central de Cordoba mano a mano contra Lanús</string>
    <string name="contenido1Central">El Ferroviario fue un poco más que el Grana, pero no pudo romper el 0-0 en Santiago del Estero. En la visita, que terminó con diez por la expulsión de Canalé, debutó Ricardo Zielinski.</string>
    <string name="contenido2Central">Por la novena fecha de la Zona B de la Copa de la Liga Profesional, Central Córdoba y Lanús igualaron 0-0 en el Estadio Único Madre de Ciudades. El local dispuso de las situaciones más claras de gol, pero se tuvo que conformar con la igualdad ante un Granate que sufrió la injusta expulsión de José María Canalé Domínguez.</string>
    <string name="tituloNoticiaBoca">Rotación de Boca para jugar contra Independiente</string>
    <string name="contenido1Boca">Por la 10° fecha de la Copa de la Liga, Boca Juniors visitará a Racing en el Cilindro de Avellaneda a las 19:00 horas. El árbitro del encuentro será: Nicolás Ramírez y en el VAR: Jorge Baliño.</string>
    <string name="contenido2Boca">Después de un gran encuentro hecho en La Bombonera contra Unión, donde se volvió al triunfo, el plantel “Xeneize” tuvo un fin de semana con entrenamientos regenerativos para los que jugaron.Jorge Almirón, con la final de la Copa Libertadores a la vuelta de la esquina, tendrá su penúltima parada en Avellaneda. El técnico hará un recambio en el equipo para preservar a la gran mayoría de los titulares. En la práctica de ayer aparecieron Aaron Anselmino, Jabes Saralegui y Luca Langoni en el equipo titular que se paró.</string>
    <string name="tituloNoticiaRiver">Preocupación en River: se lesionó De la Cruz y podría ser baja contra Independiente</string>
    <string name="contenido1River">La mañana arrancó tambaleante para un River que se prepara para recibir a Independiente en un partido clave por el liderazgo de la Zona A de la Copa de la Liga. A las fotos difundidas en redes sociales por el mal estado del campo de juego del Monumental, se le sumó la lesión de uno de sus jugadores más importantes del plantel, cuya falta se nota cada vez que no está en el equipo, como sucedió en la pasada jornada frente a Colón de Santa Fe. Se trata de Nicolás de la Cruz, el raudo volante que sufrió una tendinitis aquílea en el pie izquierdo.</string>
    <string name="contenido2River">Lo que le sucedió al uruguayo es que se le inflamó el llamado tendón de Aquiles, que se ubica en la parte inferior del pie y provoca dolor cerca de la planta y en el talón. Si bien a simple vista no parecería una lesión de gravedad extrema, desde el cuadro de Núñez estiman que estaría, al menos, 10 días sin poder jugar. De todos modos, no descartan su presencia en la lista de convocados para enfrentar al Rojo este miércoles, desde las 21 horas, en Alcorta 7597 en caso de que la zona se desinflame. El problema para el mediocampista de la Selección charrúa es que, si continúa la inflamación, también podría perderse el duelo contra Gimnasia y Esgrima La Plata en el Juan Carmelo Zerillo, porque será el próximo 29 de octubre y tendría que recuperarse en solo seis días, un tiempo récord prácticamente.</string>
    <string name="tituloNoticiaRosario">Rosario Central empató con Vélez</string>
    <string name="contenido1Rosario">Rosario Central y Vélez igualaron 1 a 1 en el Estadio Gigante de Arroyito por la fecha 9 de la Zona A de la Copa de la Liga. El gol del Fortín lo convirtió Santiago Castro y lo empató Maxi Lovera de penal para el Canalla. El árbitro del partido fue Leandro Rey Hilfer.</string>
    <string name="contenido2Rosario">El encuentro comenzó con Rosario Central teniendo la primer situación clara con un cabezazo de Ariel Cervera tras un centro preciso del “10” Ignacio Malcorra. El Fortín tuvo una situación clara con un remate de Francisco Pizzini que su remate dió en el travesaño. La jugada se dió tras una mala salida del jugador Damián Martínez. En el minuto 29 el equipo del Gallego Méndez se puso en ventaja con gol de cabeza de Santiago Castro.</string>
    <string name="tituloNoticiaDefensa">Dudas y lesiones en Defensa y Justicia</string>
    <string name="contenido1Defensa">Más de medio equipo lesionado y en duda tiene el DT Julio Vaccari en el plantel del Halcón. Seis jugadores habitualmente titulares están en duda para el compromiso ante Unión, del próximo martes a las 17:00 en Santa Fe, por distintas lesiones.</string>
    <string name="contenido2Defensa">La seguidilla de partidos que viene teniendo Defensa y Justicia le está pasando factura. El de Varela fue el único equipo argentino en alcanzar las semifinales de la Copa Sudamericana, es semifinalista de la Copa Argentina y, a la par, continúa disputando la Copa de la Liga, con lo cual se explica la cantidad de bajas. Jugadores habitualmente titulares como Uvita Fernández, Gabriel Alanís, Agustín Sant’Anna, Julián Malatini y Kevin Gutiérrez ni siquiera concentraron para el encuentro ante Belgrano por diversas lesiones. A ellos se sumó David Barbona, quien debió solicitar el cambio en el ET ante los de Farré. “Esperamos en estos días poder recuperar alguno de los chicos que están lesionados para tener algo más de frescura”, dijo el DT Julio Vaccari, luego de la derrota ante el Pirata. Lo cierto es que Gutiérrez está descartado y los cinco restantes están al límite, con lo cual estos últimos entrenamientos serán claves para saber si podrán estar en Santa Fe para enfrentar a Unión.</string>
    <string name="tituloNoticiaNewells">Confirmado: habrá amistoso entre Inter Miami y Newells</string>
    <string name="contenido1Newells">Ignacio Astore, presidente de la Lepra, oficializó que en febrero se jugará el partido ante Lionel Messi.</string>
    <string name="contenido2Newells">Es oficial. El presidente de Newells, Ignacio Astore, confirmó de manera oficial la fecha en la cual se disputará un partido especial para todos los hinchas de la Lepra. El equipo rosarino se medirá ante el Inter Miami en un encuentro que quedará para el recuerdo de todos sus hinchas.</string>
    <string name="tituloNoticiaIndependiente">El desafío del Apache</string>
    <string name="contenido1Independiente">El flamante entrenador fue presentado en sociedad tras dirigir su primer entrenamiento. El domingo debutará ante Vélez. "Tengo huevos para agarrar", agregó.</string>
    <string name="contenido2Independiente">CARLOS TEVEZ asumió como nuevo entrenador de Independiente y fue presentado en sociedad. En medio de un delicado momento institucional y futbolístico, el Rojo acudió al ídolo de Boca, que tendrá su segunda experiencia luego de su paso por Rosario Central. "Sé muy bien dónde me meto. Independiente es un grande dormido y me motiva eso. Siempre voy para adelante, creo plenamente en los jugadores y en mi capacidad", dijo Tevez en la conferencia de prensa que se desarrolló en el estadio Libertadores de América - Ricardo Bochini</string>
    <string name="tituloNoticiaRacing">Paolo Guerrero llegó a Racing</string>
    <string name="contenido1Racing">Así lo contó el delantero peruano en sus presentación, además aseguró que su deseo es hacer "historia" en el club de Avellaneda.</string>
    <string name="contenido2Racing">Paolo Guerrero, en conferencia de prensa declaró que "Estar en Racing para mí es un sueño. Mi sueño es hacer historia aquí en un club tan grande como este. Y voy a prepararme del mejor modo posible para poder intentar conseguirlo". Guerrero, de 39 años, se mostró confiado por la actualidad del equipo tras las obtenciones del Trofeo de Campeones y la Supercopa Internacional, ambas ante Boca Juniors, y al respecto aseguró que van "a pelear por todos los campeonatos" del año. "Racing es un equipo que viene de salir campeón y pelea en los primeros planos. Además, ya habían pensado en mí en su momento y eso representó una satisfacción y, al mismo tiempo, un desafío a la hora de decidirme", dijo.</string>
</resources>